<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_forward"
        android:icon="@drawable/ic_msg_action_forward"
        android:title="@string/forward_to_favorites"
        app:showAsAction="ifRoom"/>
    <item
        android:id="@+id/action_reply"
        android:icon="@drawable/ic_msg_action_reply"
        android:title="@string/chat_reply_action"
        app:showAsAction="always"/>
    <item
        android:id="@+id/action_react"
        android:title="@string/chat_react_action"
        android:visible="false"
        app:showAsAction="never"/>
    <item
        android:id="@+id/action_edit"
        android:title="@string/chat_edit_action"
        android:visible="false"
        app:showAsAction="never"/>
    <item
        android:id="@+id/action_copy"
        android:icon="@drawable/ic_msg_action_copy"
        android:title="@string/layout___copy"
        app:showAsAction="always"/>
    <item
        android:id="@+id/action_save"
        android:icon="@drawable/ic_msg_action_save"
        android:title="@string/layout___export"
        android:visible="false"
        app:showAsAction="always"/>
    <item
        android:id="@+id/action_delete"
        android:icon="@drawable/ic_msg_action_delete"
        android:title="@string/layout___delete"
        app:showAsAction="always"/>
    <item
        android:id="@+id/action_info"
        android:icon="@drawable/ic_msg_action_info"
        android:title="@string/layout___info"
        android:visible="false"
        app:showAsAction="ifRoom"/>
</menu>