<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/item_theme_toggle"
        android:title="@string/theme_toggle_accessibility"
        app:showAsAction="always" />
    <item
        android:id="@+id/item_addfriend"
        android:title="@string/layout___add_friend"
        android:visible="true"
        app:showAsAction="always" />
    <item
        android:id="@+id/item_group_menu"
        android:title="@string/group_actions_menu_title"
        android:visible="true"
        app:showAsAction="always">
        <menu>
            <item
                android:id="@+id/item_create_group_private"
                android:title="@string/layout___create_new_private_group" />
            <item
                android:id="@+id/item_create_group_public"
                android:title="@string/layout___create_new_public_group" />
            <item
                android:id="@+id/item_join_group_public"
                android:title="@string/layout___join_public_group" />
        </menu>
    </item>

</menu>